--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+php-java-bridge (4.0.6-1) unstable; urgency=low
+
+  * New upstream version
+
+ -- Andre Felipe Machado <af-machado@uol.com.br>  Mon, 26 Mar 2007 13:18:49 -0300
+
 php-java-bridge (4.0.2-1) unstable; urgency=low
 
   * New upstream version.
